Fix Navtabs and SideMenu layout issues on mobile (#2401)

--- a/website/src/views/modules/ModuleFinderSidebar.scss
+++ b/website/src/views/modules/ModuleFinderSidebar.scss
@@ -1,7 +1,6 @@
 @import "~styles/utils/modules-entry";
 
 .moduleFilters {
-  height: 100%;
   user-select: none;
 
   .filterHeader {
